Fix mobile menu when it are collapsing

--- a/app/assets/stylesheets/heder.scss
+++ b/app/assets/stylesheets/heder.scss
@@ -13,7 +13,9 @@ header{
 #navbarCollapse{
   background-color: #000;
 }
-#navbarCollapse.collapse.show {
+#navbarCollapse.collapse.show,
+#navbarCollapse.collapsing
+{
   margin-top: 42px;
   z-index: 100;
 }
